# city-ride-demand

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  nightly_ingest.yml
scripts/: list_minio.py  smoke_test.py
sql/: create_status_schema.sql  sanity_check.sql
src/etl/: load_one.py  load_weather_day.py
src/ingest/: dump_loop.py  tfl_fetcher.py
tests/: test_fetcher.py
