
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
pytest = "^8.4.1"
pytest-httpx = "^0.35.0"
pytest-asyncio = "^1.0.0"
aioresponses = "^0.7.8"


[tool.poetry.group.direct.dependencies]
psycopg = {version = "^3.2", extras = ["binary"]}

[tool.poetry]
name = "city-ride-demand"
version = "0.1.0"
description = ""
authors = ["Saleh <smalsharideh1@sheffield.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python        = ">=3.12,<4.0"
aiohttp       = "^3.9"
requests      = "^2.32"
python-dotenv = "^1.1"
tenacity      = "^9.1"         
structlog     = "^25.4"
urllib3       = "^2.5"
aioboto3 = "^15.0.0"
psycopg = {extras = ["binary"], version = "^3.2.9"}

[[tool.poetry.packages]]  
include = "ingest"
from    = "src"